caseスタイルのみ作成

--- a/next-app/content/1.md
+++ b/next-app/content/1.md
@@ -1,10 +1,20 @@
 ---
-company: "沢井製薬株式会社様"
+company: "沢井製薬株式会社"
 title: "頭痛オンライン"
+category: "WEB"
 description: "頭痛に悩む方のためのWebサイト"
 work: "疾患啓発（DTC）サイト構築"
 goal: "情報量が少なくなりがちな専門性の高い情報を発信することで、頭痛でお悩みの患者さんに寄添いたい"
 info: "頭痛に悩む方のためのWebサイト「頭痛オンライン」（2018～）"
+list_request: "情報量が少なくなりがちな専門性の高い情報を発信することで、頭痛でお悩みの患者さんに寄添いたい"
+tags:
+    [
+        "企画・提案",
+        "デザイン",
+        "CMS構築",
+        "HTML構造",
+        "運用サポート"
+    ]
 requests: 
     [
             "頭痛に関する専門性の高い疾患情報を、分かりやすく、読みやすく伝えたい",
