case画像以外完成

--- a/next-app/content/02.md
+++ b/next-app/content/02.md
@@ -4,6 +4,7 @@ company: "沢井製薬株式会社"
 title: "頭痛オンライン"
 # 事例詳細でのみ使用
 description: "頭痛に悩む方のためのWebサイト"
+img: "case02_customer.png"
 work: "疾患啓発（DTC）サイト構築"
 goal: "情報量が少なくなりがちな専門性の高い情報を発信することで、頭痛でお悩みの患者さんに寄添いたい"
 info: "頭痛に悩む方のためのWebサイト「頭痛オンライン」（2018～）"
@@ -48,6 +49,7 @@ resolutions:
     ]
 # 事例一覧でのみ使用
 category: "WEB"
+previewImg: "case02_customer_preview.png"
 tags:
     [
         "企画・提案",
